# campcli

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE.md  README.md  checklogs.sh  deploy.sh  findings.md  next-steps.md  progress.md  pyproject.toml  requirements.txt  task_plan.md  test-report.md
.dex/: archive.jsonl  tasks.jsonl
.opencode/: opencode.json
.scratch/: grill-analysis.md  opencode-bash-readonly-whitelist.json
.scratch/cli-use-case-extract/: PRD.md
.scratch/flexible-days/: PRD.md
.scratch/mark-not-interested/: PRD.md
.scratch/multi-profile/: PRD.md
.scratch/poller-split/: PRD.md
.scratch/thumbs-down-reaction-not-interested/: PRD.md
contrib/: README.md  campcli-daemon.service
demos/: cli-use-case-extract.md  poller-split.md
memory/: daily-availability-grid.md  index.md  log.md
responses/: availability_raw.json  availability_sample.json  campgrounds.json
tests/: conftest.py  test_api_logging.py  test_availability.py  test_blocked.py  test_bookings.py  test_cli_telegram.py  test_clock.py  test_command_responses.py  test_command_router.py  test_daemon.py  test_daemon_log.py  test_drive_times.py  test_migrate_profile.py  test_not_interested_repo.py  test_not_interested_use_cases.py  test_notification_policy.py  test_poller.py  test_profile.py  test_profile_cli.py  test_profile_repo.py  test_profile_use_cases.py  test_search.py  test_search_loop.py  test_search_notifier.py  test_search_use_cases.py  test_sent_notifications_purge.py  test_store.py  test_telegram.py  test_telegram_settings.py  test_telegram_users.py  test_throttle.py
(+93 files in other folders)
