[project]
name = "campcli"
version = "0.1.0"
description = "Command-line tool for monitoring BC Parks campsite availability"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "typer>=0.15",
    "pydantic>=2.10",
]

[project.scripts]
campcli = "campcli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/campcli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
]
